// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutocompleteInput should render a regular version of search bar if size prop isnt small, regular or large 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column w-100"
  >
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-100"
      >
        <input
          class="b--muted-4 bg-base h-regular w-100 ma0 border-box bw1 br2 ba outline-0 c-on-base t-body ph5 pr8 br--left"
          placeholder=""
          value=""
        />
      </div>
      <button
        class="b--muted-4 bg-base h-regular bg-base br2 br--right w3 bw1 ba pa0 bl-0 c-link pointer"
      >
        <svg
          class="vtex__icon-search  "
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M15.707 13.293L13 10.586C13.63 9.536 14 8.311 14 7C14 3.14 10.859 0 7 0C3.141 0 0 3.14 0 7C0 10.86 3.141 14 7 14C8.312 14 9.536 13.631 10.586 13L13.293 15.707C13.488 15.902 13.744 16 14 16C14.256 16 14.512 15.902 14.707 15.707L15.707 14.707C16.098 14.316 16.098 13.684 15.707 13.293ZM7 12C4.239 12 2 9.761 2 7C2 4.239 4.239 2 7 2C9.761 2 12 4.239 12 7C12 9.761 9.761 12 7 12Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AutocompleteInput should render with a large size bar 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column w-100"
  >
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-100"
      >
        <input
          class="b--muted-4 bg-base h-large w-100 ma0 border-box bw1 br2 ba outline-0 c-on-base t-body ph5 pr8 br--left"
          placeholder=""
          value=""
        />
      </div>
      <button
        class="b--muted-4 bg-base h-large bg-base br2 br--right w3 bw1 ba pa0 bl-0 c-link pointer"
      >
        <svg
          class="vtex__icon-search  "
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M15.707 13.293L13 10.586C13.63 9.536 14 8.311 14 7C14 3.14 10.859 0 7 0C3.141 0 0 3.14 0 7C0 10.86 3.141 14 7 14C8.312 14 9.536 13.631 10.586 13L13.293 15.707C13.488 15.902 13.744 16 14 16C14.256 16 14.512 15.902 14.707 15.707L15.707 14.707C16.098 14.316 16.098 13.684 15.707 13.293ZM7 12C4.239 12 2 9.761 2 7C2 4.239 4.239 2 7 2C9.761 2 12 4.239 12 7C12 9.761 9.761 12 7 12Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AutocompleteInput should render with a regular size bar 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column w-100"
  >
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-100"
      >
        <input
          class="b--muted-4 bg-base h-regular w-100 ma0 border-box bw1 br2 ba outline-0 c-on-base t-body ph5 pr8 br--left"
          placeholder=""
          value=""
        />
      </div>
      <button
        class="b--muted-4 bg-base h-regular bg-base br2 br--right w3 bw1 ba pa0 bl-0 c-link pointer"
      >
        <svg
          class="vtex__icon-search  "
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M15.707 13.293L13 10.586C13.63 9.536 14 8.311 14 7C14 3.14 10.859 0 7 0C3.141 0 0 3.14 0 7C0 10.86 3.141 14 7 14C8.312 14 9.536 13.631 10.586 13L13.293 15.707C13.488 15.902 13.744 16 14 16C14.256 16 14.512 15.902 14.707 15.707L15.707 14.707C16.098 14.316 16.098 13.684 15.707 13.293ZM7 12C4.239 12 2 9.761 2 7C2 4.239 4.239 2 7 2C9.761 2 12 4.239 12 7C12 9.761 9.761 12 7 12Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AutocompleteInput should render with a regular size bar when prop is absent 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column w-100"
  >
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-100"
      >
        <input
          class="b--muted-4 bg-base h-regular w-100 ma0 border-box bw1 br2 ba outline-0 c-on-base t-body ph5 pr8 br--left"
          placeholder=""
          value=""
        />
      </div>
      <button
        class="b--muted-4 bg-base h-regular bg-base br2 br--right w3 bw1 ba pa0 bl-0 c-link pointer"
      >
        <svg
          class="vtex__icon-search  "
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M15.707 13.293L13 10.586C13.63 9.536 14 8.311 14 7C14 3.14 10.859 0 7 0C3.141 0 0 3.14 0 7C0 10.86 3.141 14 7 14C8.312 14 9.536 13.631 10.586 13L13.293 15.707C13.488 15.902 13.744 16 14 16C14.256 16 14.512 15.902 14.707 15.707L15.707 14.707C16.098 14.316 16.098 13.684 15.707 13.293ZM7 12C4.239 12 2 9.761 2 7C2 4.239 4.239 2 7 2C9.761 2 12 4.239 12 7C12 9.761 9.761 12 7 12Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AutocompleteInput should render with a small size bar 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column w-100"
  >
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-100"
      >
        <input
          class="b--muted-4 bg-base h-small w-100 ma0 border-box bw1 br2 ba outline-0 c-on-base t-body ph5 pr8 br--left"
          placeholder=""
          value=""
        />
      </div>
      <button
        class="b--muted-4 bg-base h-small bg-base br2 br--right w3 bw1 ba pa0 bl-0 c-link pointer"
      >
        <svg
          class="vtex__icon-search  "
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M15.707 13.293L13 10.586C13.63 9.536 14 8.311 14 7C14 3.14 10.859 0 7 0C3.141 0 0 3.14 0 7C0 10.86 3.141 14 7 14C8.312 14 9.536 13.631 10.586 13L13.293 15.707C13.488 15.902 13.744 16 14 16C14.256 16 14.512 15.902 14.707 15.707L15.707 14.707C16.098 14.316 16.098 13.684 15.707 13.293ZM7 12C4.239 12 2 9.761 2 7C2 4.239 4.239 2 7 2C9.761 2 12 4.239 12 7C12 9.761 9.761 12 7 12Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
